# Financial-Fraud-Engine

./: .gitignore  .vercelignore  Dockerfile.vercel  LICENSE  README.md  app.py  model.py  pyproject.toml  requirements.txt  utils.py  vercel.json
api/: index.py
data/: .gitkeep  demo_creditcard.csv
screenshots/: .gitkeep
