[project]
name = "financial-fraud-intelligence-engine"
version = "1.0.0"
description = "Streamlit fraud detection engine"
requires-python = ">=3.11"

# Dependencies come from requirements.txt only (avoids duplicate/conflicting sources).
# Point Vercel at api/index.py so root Streamlit app.py is not treated as FastAPI/Flask.
[tool.vercel]
entrypoint = "api.index:handler"
