[project]
name = "financial-fraud-intelligence-engine"
version = "1.0.0"
description = "Streamlit fraud detection engine"
requires-python = ">=3.11"

# Dependencies are installed from requirements.txt / Dockerfile.vercel.
# Do not set tool.vercel.entrypoint to api.index — that forces the
# serverless text handler instead of the Streamlit container UI.
